# MemoDB

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.plan/: 01-vision-and-bets.md  02-decision-log.md  03-architecture.md  04-data-model.md  05-api-and-app-flow.md  06-roadmap.md  07-risks-and-open-questions.md  README.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: README.md  pubspec.yaml
app/lib/: app.dart  main.dart
app/lib/core/: api_client.dart  config.dart  models.dart  providers.dart  theme.dart
app/lib/features/capture/: capture_screen.dart
app/lib/features/document/: document_screen.dart
app/lib/features/notes/: notes_screen.dart
app/lib/features/profile/: profile_dialog.dart
app/lib/features/search/: search_screen.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  deps.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: chunker.py  indexer.py  retrieval.py  title_gen.py  vault.py
backend/app/services/embeddings/: __init__.py  api.py  base.py  factory.py  ollama.py
backend/migrations/: 001_init.sql
backend/scripts/: seed.py
backend/tests/: test_chunker.py  test_embedder.py  test_vault_roundtrip.py
docs/: ADR-0001-architecture.md
